Redid images and cleaned up text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="pt-20">
       <div class="flex flex-col">
         <!--Cover-->
-        <img class="w-80 h-80 rounded-full mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="400" height="400">
+        <img class="w-80 h-80 rounded-full mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="500">
         <div class="mx-auto pb-20 text-white text-center">
           <p class="text-5xl font-bold pt-10">Oke Amuwha</p>
           <p class="mb-5 p-5">I'm really alive right now. Experiencing the universe as a human being</p>
@@ -23,7 +23,7 @@
         </div>
         <!--School-->
         <div class="bg-white rounded-tl-lg rounded-tr-lg py-20">
-          <img class="w-60 h-60 mx-auto shadow" src="images/School Glyph.svg" alt="School glyph" width="300"> <!--School img-->
+          <img class="w-60 h-60 rounded-full border-solid border-2 border-black mx-auto shadow-lg" src="images/School.svg" alt="School glyph" width="300"> <!--School img-->
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
@@ -71,42 +71,42 @@
               <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                 <!--C++-->
                 <div>
-                  <img class="rounded-full bg-white mx-auto" src="images/C++.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/C++.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">C++</p>
                 </div>
                 <!--HTML-->
                 <div>
-                  <img class="rounded-full bg-white mx-auto" src="images/Html 5.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/HTML.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">HTML</p>
                 </div>
                 <!--Python-->
                 <div>
-                  <img class="rounded-full bg-white mx-auto" src="images/Python.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/Python.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Python</p>
                 </div>
                 <!--Java-->
                 <div>
-                  <img class="rounded-full bg-white mx-auto" src="images/Java.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/Java.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Java</p>
                 </div>
                 <!--Github-->
                 <div>
-                  <img class="rounded-full bg-white mx-auto" src="images/GitHub.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/GitHub.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Github</p>
                 </div>
                 <!--Figma-->
                 <div>
-                  <img class="rounded-full bg-white mx-auto" src="images/Figma.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/Figma.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Figma</p>
                 </div>
                 <!--Tailwind-->
                 <div>
-                  <img class="rounded-full bg-white mx-auto py-4" src="images/Tailwind.png" alt="C++" width="80">
+                  <img class="rounded-full mx-auto py-4" src="images/Tailwind.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Tailwind</p>
                 </div>
                 <!--React-->
                 <div>
-                  <img class="rounded-full bg-white mx-auto" src="images/React.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/React.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">React JS</p>
                 </div>
               </div>
@@ -115,7 +115,7 @@
             <div class="p-10 mb-10">
               <h1 class="text-3xl font-bold">Projects</h1>
               <!--Projects in figma-->
-              <p>Figma</p>
+              <p class="p-4 text-2xl">Design</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
                 <div>
                   <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
@@ -131,7 +131,7 @@
                 </div>
               </div>
               <!--Projects in python-->
-              <p>Python</p>
+              <p class="p-4 text-2xl mt-5">Python</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
                 <div>
                   <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
@@ -152,11 +152,15 @@
               <h1 class="text-3xl font-bold">Work Experience</h1>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
                 <div>
-                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <div>
+                    <img class="rounded-full mx-auto" src="images/Allstate.svg" alt="Allstate Logo" width="150">
+                  </div>
                   <p class="pt-2 text-lg">Allstate</p>
                 </div>
                 <div>
-                  <div class="w-40 h-40 rounded-full bg-gray-300 mx-auto"></div>
+                  <div>
+                    <img class="rounded-full mx-auto" src="images/Apple.svg" alt="Apple Logo" width="150">
+                  </div>
                   <p class="pt-2 text-lg">Apple</p>
                 </div>
                 <div>
