Redid images and cleaned up text; Updated footer

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <!--Tailwind-->
                 <div>
-                  <img class="rounded-full mx-auto py-4" src="images/Tailwind.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/Tailwind.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Tailwind</p>
                 </div>
                 <!--React-->
@@ -172,6 +172,23 @@
             <hr>
             <!--Footer-->
             <footer>
+              <div class="p-4 mb-5">
+                <h1 class="text-3xl font-bold">Socials</h1>
+                <div class="flex flex-row justify-evenly px-20">
+                  <div>
+                    <div class="w-10 h-10 rounded-full bg-gray-300 p-5 mx-auto"></div>
+                    <p class="pt-2 text-sm">LinkedIn</p>
+                  </div>
+                  <div>
+                    <div class="w-10 h-10 rounded-full bg-gray-300 p-5 mx-auto"></div>
+                    <p class="pt-2 text-sm">E-mail</p>
+                  </div>
+                  <div>
+                    <div class="w-10 h-10 rounded-full bg-gray-300 p-5 mx-auto"></div>
+                    <p class="pt-2 text-sm">Thing</p>
+                  </div>
+                </div>
+              </div>
               Oke Amuwha
               &copy 2022
             </footer>
@@ -182,7 +199,6 @@
     <!--React stuff-->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    
     <script src="https://unpkg.com/react-tabs/dist/react-tabs.development.js"></script>
   </body>
 </html>
