--- a/index.html
+++ b/index.html
@@ -101,37 +101,37 @@
                   <p class="pt-2 text-lg">C++</p>
                 </div>
                 <!--HTML-->
-                <div>
+                <div class="hover:text-green-300">
                   <img class="rounded-full mx-auto" src="images/HTML.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">HTML</p>
                 </div>
                 <!--Python-->
-                <div>
+                <div class="hover:text-green-300">
                   <img class="rounded-full mx-auto" src="images/Python.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Python</p>
-                </div>
+                </div class="hover:text-green-300">
                 <!--Java-->
-                <div>
+                <div class="hover:text-green-300">
                   <img class="rounded-full mx-auto" src="images/Java.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Java</p>
                 </div>
                 <!--Github-->
-                <div>
+                <div class="hover:text-green-300">
                   <img class="rounded-full mx-auto" src="images/GitHub.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Github</p>
-                </div>
+                </div class="hover:text-green-300">
                 <!--Figma-->
-                <div>
+                <div class="hover:text-green-300">
                   <img class="rounded-full mx-auto" src="images/Figma.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Figma</p>
                 </div>
                 <!--Tailwind-->
-                <div>
+                <div class="hover:text-green-300">
                   <img class="rounded-full mx-auto" src="images/Tailwind.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">Tailwind</p>
                 </div>
                 <!--React-->
-                <div>
+                <div class="hover:text-green-300">
                   <img class="rounded-full mx-auto" src="images/React.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">React JS</p>
                 </div>
