Used javascript css html to create inline tabs

--- a/index.html
+++ b/index.html
@@ -68,39 +68,58 @@
               <button class="tablinks" onclick="aboutSec(event, 'Interests')">Interests</button>
             </div>
             <!--Content-->
-            <p class="text-3xl font-bold mb-5">Me!</p>
-            <div id="Me!" class="tabcontent"></div>
-            <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
-              Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
-              Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
-              Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
-              Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
-              Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
-              Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
-              Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
-            </p>
-            <p class="text-3xl font-bold mb-5">Hobbies</p>
-            <div id="Hobbies" class="tabcontent"></div>
-            <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
-              Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
-              Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
-              Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
-              Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
-              Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
-              Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
-              Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
-            </p>
-            <p class="text-3xl font-bold mb-5">Interests</p>
-            <div id="Interests" class="tabcontent"></div>
-            <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
-              Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
-              Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
-              Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
-              Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
-              Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
-              Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
-              Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
-            </p>
+            <!--<p class="text-3xl font-bold mb-5">Me!</p>-->
+            <div id="Me!" class="tabcontent">
+              <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+                Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
+                Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
+                Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
+                Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
+                Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
+                Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
+                Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
+              </p>
+            </div>
+            <!--<p class="text-3xl font-bold mb-5">Hobbies</p>-->
+            <div id="Hobbies" class="tabcontent">
+              <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+                Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
+                Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
+                Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
+                Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
+                Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
+                Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
+                Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
+              </p>
+            </div>
+            <!--<p class="text-3xl font-bold mb-5">Interests</p>-->
+            <div id="Interests" class="tabcontent">
+              <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+                Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
+                Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
+                Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
+                Justo, amet tellus arcu massa. Mi lorem nunc, orci, quis eget.
+                Morbi placerat sed urna et. Viverra integer eu ultrices at viverra commodo, rutrum ut. 
+                Posuere egestas fermentum malesuada donec morbi. Luctus sapien, quam posuere enim, mi interdum vitae pellentesque. 
+                Placerat quis eros, lectus nisi, orci. Scelerisque ac nam iaculis.
+              </p>
+            </div>
+            <!--Javascript-->
+            <script>
+              function aboutSec(evt, tabType) {
+                let i, tabcontent, tablinks;
+                tabcontent = document.getElementsByClassName("tabcontent");
+                for (i = 0; i < tabcontent.length; i++) {
+                  tabcontent[i].style.display = "none";
+                }
+                tablinks = document.getElementsByClassName("tablinks");
+                for (i = 0; i < tablinks.length; i++) {
+                  tablinks[i].className = tablinks[i].className.replace(" active", "");
+                }
+                document.getElementById(tabType).style.display = "block";
+                evt.currentTarget.className += " active";
+              }
+              </script>
 
             <!--Skills-->
             <div class="bg-blue-600 text-white rounded-xl p-10">
@@ -148,6 +167,7 @@
                 </div>
               </div>
             </div>
+
             <!--Projects-->
             <div class="p-10 mb-10">
               <h1 class="text-3xl font-bold">Projects</h1>
@@ -184,6 +204,7 @@
                 </div>
               </div>
             </div>
+
             <!--Work Experience-->
             <div class="bg-blue-600 text-white rounded-lg p-10">
               <h1 class="text-3xl font-bold">Work Experience</h1>
@@ -206,6 +227,7 @@
                 </div>
               </div>
             </div>
+
             <hr>
             <!--Footer-->
             <footer>
