--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
             <!--About Me-->
-            <p class="mb-20">Bachelor of Science in Computer Science</p>
+            <p class="mb-10">Bachelor of Science in Computer Science</p>
             <!--React stuff-->
             <div id="Tab_maker"></div> <!--Look here!-->
-            <script>
+            <!--<script>
               const domContainer = document.querySelector('#tab_maker');
               const root = ReactDOM.createRoot(domContainer);
               root.render(e(tabButton));
-            </script>
+            </script>-->
             <!--About me Tabs-->
             <!--Links-->
-            <div class="tabs">
-              <button class="tablinks" class="text-green" onclick="aboutSec(event, 'Me!')">Me!</button>
-              <button class="tablinks" onclick="aboutSec(event, 'Hobbies')">Hobbies</button>
-              <button class="tablinks" onclick="aboutSec(event, 'Interests')">Interests</button>
+            <div class="tabs mb-10">
+              <button class="tablinks" onclick="aboutSec(event, 'About')" id="default"><p class="text-3xl font-bold">About</p></button>
+              <button class="tablinks" onclick="aboutSec(event, 'Hobbies')"><p class="text-3xl font-bold">Hobbies</p></button>
+              <button class="tablinks" onclick="aboutSec(event, 'Interests')"><p class="text-3xl font-bold">Interests</p></button>
             </div>
             <!--Content-->
             <!--<p class="text-3xl font-bold mb-5">Me!</p>-->
-            <div id="Me!" class="tabcontent">
-              <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+            <div id="About" class="tabcontent">
+              <p class="mb-20 px-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
                 Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
                 Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
                 Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
@@ -82,7 +82,7 @@
             </div>
             <!--<p class="text-3xl font-bold mb-5">Hobbies</p>-->
             <div id="Hobbies" class="tabcontent">
-              <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+              <p class="mb-20 px-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
                 Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
                 Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
                 Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
@@ -94,7 +94,7 @@
             </div>
             <!--<p class="text-3xl font-bold mb-5">Interests</p>-->
             <div id="Interests" class="tabcontent">
-              <p class="mb-20 px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+              <p class="mb-20 px-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
                 Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
                 Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
                 Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
@@ -119,6 +119,7 @@
                 document.getElementById(tabType).style.display = "block";
                 evt.currentTarget.className += " active";
               }
+              document.getElementById("default").click(); /*Opens by default*/
               </script>
 
             <!--Skills-->
