--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <!--<p class="text-3xl font-bold mb-5">Hobbies</p>-->
             <div id="Hobbies" class="tabcontent">
-              <p class="mb-20 px-10 text-blue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+              <p class="mb-20 px-10 text-blue-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
                 Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
                 Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
                 Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
@@ -94,7 +94,7 @@
             </div>
             <!--<p class="text-3xl font-bold mb-5">Interests</p>-->
             <div id="Interests" class="tabcontent">
-              <p class="mb-20 px-10 text-purple">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
+              <p class="mb-20 px-10 text-purple-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa orci nunc odio cras quisque. 
                 Proin suspendisse dignissim elementum etiam. Ipsum ullamcorper ultricies purus sit habitant. 
                 Auctor sagittis, facilisis molestie turpis. Erat velit sapien arcu at ultricies hendrerit. 
                 Augue faucibus augue purus elementum sed duis nisl, dictumst auctor. Aliquam, dui sapien enim congue consequat. 
