Started setup of navbar (Skeleton)

--- a/index.html
+++ b/index.html
@@ -9,31 +9,20 @@
   </head>
   <header>
   <!--Navbar-->
-    <!--<ul>
-      <div class="navBar">
-        <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="20">
-        <h1> 
-            Oke Amuwha
-        </h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">HOME</a>
-                </li>
-                <li>
-                    <a href="column.html">ARTICLES</a>
-                </li>
-                <li>
-                    <a href="about.html">ABOUT</a>
-                </li>
-                <li>
-                <a href="contact.html">FEEDBACK</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-    </ul>-->
-
+    <nav class="">
+      <div class="">
+        <img class="" src="images/Logo.svg" alt="Logo" width="20">
+        <span class="">Oke Amuwha</span>
+      </div>
+      <div class="">
+        <div class="">
+          <a href="#school" class="">About</a>
+          <a href="#skills" class="">Skills</a>
+          <a href="#projects" class="">Projects</a>
+          <a href="#experience" class="">Experience</a>
+        </div>
+      </div>
+    </nav>
   </header>
   <!--Main-->
   <body class="parallax">
@@ -47,7 +36,7 @@
           <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="100"> <!--Logo-->
         </div>
         <!--School-->
-        <div class="bg-white rounded-tl-lg rounded-tr-lg py-20">
+        <div id="school" class="bg-white rounded-tl-lg rounded-tr-lg py-20">
           <img class="w-60 h-60 rounded-full border-solid border-2 border-black mx-auto shadow-lg" src="images/School.svg" alt="School glyph" width="300"> <!--School img-->
           <div class="text-center">
             <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
@@ -124,7 +113,7 @@
 
             <!--Skills-->
             <div class="bg-blue-600 text-white rounded-xl p-10">
-              <h1 class="text-3xl font-bold">Skills</h1>
+              <h1 id="skills" class="text-3xl font-bold">Skills</h1>
               <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                 <!--C++-->
                 <div class="hover:text-green-300">
@@ -171,7 +160,7 @@
 
             <!--Projects-->
             <div class="p-10 mb-10">
-              <h1 class="text-3xl font-bold">Projects</h1>
+              <h1 id="projects" class="text-3xl font-bold">Projects</h1>
               <!--Projects in figma-->
               <p class="p-4 text-2xl">Design</p>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
@@ -208,7 +197,7 @@
 
             <!--Work Experience-->
             <div class="bg-blue-600 text-white rounded-lg p-10">
-              <h1 class="text-3xl font-bold">Work Experience</h1>
+              <h1 id="experience" class="text-3xl font-bold">Work Experience</h1>
               <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-10">
                 <div>
                   <div>
