--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
   </head>
   <header>
   <!--Navbar-->
-    <nav class="fixed flex flex-center justify-between flex-wrap bg-white p-5 shadow-xl rounded-bl-lg rounded-br-lg">
+    <nav class="fixed inset-x-0 flex flex-center justify-between flex-wrap bg-white opacity-75 p-5 shadow-xl rounded-lg">
       <div class="flex items-center flex-shrink-0 text-green-600 mr-6">
         <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
         <span class="font-semibold text-xl tracking-tight">Oke Amuwha</span>
       </div>
-      <div class="block lg:hidden">
+      <div class="block md:hidden">
         <button class="flex items-center px-3 py-2 border rounded hover:text-green-300 hover:border-green-300">
           <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
         </button>
       </div>
-      <div class="w-full block lg:flex lg:items-center lg:w-auto">
-        <div class="text-sm lg:flex-grow">
-          <a href="#school" class="block mt-4 lg:inline-block lg:mt-0 hover:text-green-300 mr-4">About</a>
-          <a href="#skills" class="block mt-4 lg:inline-block lg:mt-0 hover:text-green-300 mr-4">Skills</a>
-          <a href="#projects" class="block mt-4 lg:inline-block lg:mt-0 hover:text-green-300 mr-4">Projects</a>
-          <a href="#experience" class="block mt-4 lg:inline-block lg:mt-0 hover:text-green-300 mr-4">Experience</a>
+      <div class="w-full block md:flex md:items-center md:w-auto">
+        <div class="text-sm md:flex-grow">
+          <a href="#school" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">About</a>
+          <a href="#skills" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">Skills</a>
+          <a href="#projects" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">Projects</a>
+          <a href="#experience" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">Experience</a>
         </div>
       </div>
     </nav>
