Trying to impliment background blur

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <header>
   <!--Navbar-->
-    <nav class="fixed inset-x-0 flex flex-center justify-between flex-wrap bg-white opacity-75 p-5 shadow-xl rounded-lg">
+    <nav class="fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 bg-white shadow-xl rounded-lg">
       <div class="flex items-center flex-shrink-0 text-green-600 mr-6">
         <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
         <span class="font-semibold text-xl tracking-tight">Oke Amuwha</span>
