Finished styling navbar

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <header>
   <!--Navbar-->
-    <nav class="fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 bg-white shadow-xl rounded-lg">
+    <nav id="navbar" class="fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 lg:mx-10 lg:mt-5 shadow-xl rounded-lg">
       <div class="flex items-center flex-shrink-0 text-green-600 mr-6">
         <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
-        <span class="font-semibold text-xl tracking-tight">Oke Amuwha</span>
+        <span class="font-bold text-2xl tracking-tight">Oke Amuwha</span>
       </div>
       <div class="block md:hidden">
         <button class="flex items-center px-3 py-2 border rounded hover:text-green-300 hover:border-green-300">
@@ -228,17 +228,17 @@
             <footer>
               <div class="p-4 mb-5">
                 <h1 class="text-3xl font-bold">Socials</h1>
-                <div class="flex flex-row justify-evenly px-20">
+                <div class="flex flex-grow mx-auto">
                   <div>
-                    <div class="w-10 h-10 rounded-full bg-gray-300 p-5 mx-auto"></div>
+                    <div class="w-10 h-10 rounded-full bg-gray-300 p-15 mx-auto"></div>
                     <p class="pt-2 text-sm">LinkedIn</p>
                   </div>
                   <div>
-                    <div class="w-10 h-10 rounded-full bg-gray-300 p-5 mx-auto"></div>
+                    <div class="w-10 h-10 rounded-full bg-gray-300 p-15 mx-auto"></div>
                     <p class="pt-2 text-sm">E-mail</p>
                   </div>
                   <div>
-                    <div class="w-10 h-10 rounded-full bg-gray-300 p-5 mx-auto"></div>
+                    <div class="w-10 h-10 rounded-full bg-gray-300 p-15 mx-auto"></div>
                     <p class="pt-2 text-sm">Thing</p>
                   </div>
                 </div>
