--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         </div>
       </div>
     </nav>
+    <!--Show navbar on scroll-->
+    <script>
+      window.onscroll = function() {
+        var currentScrollPos = window.pageYOffset;
+        if (currentScrollPos > 400) {
+          document.getElementById("navbar").style.top = "0";
+        } else {
+          document.getElementById("navbar").style.top = "-300px";
+        }
+      }
+    </script>
   </header>
   <!--Main-->
   <body class="parallax">
