Using a better image

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="pt-20">
       <div class="flex flex-col">
         <!--Cover-->
-        <img class="w-80 h-80 rounded-full mx-auto" src="images/Placeholder.JPG" alt="Profile Picture" width="500">
+        <img class="w-80 h-80 rounded-full mx-auto" src="images/Portrait.jpeg" alt="Profile Picture" width="500">
         <div class="mx-auto pb-20 text-white text-center">
           <p class="text-5xl font-bold pt-10">Oke Amuwha</p>
           <p class="mb-5 p-5">I'm really alive right now. Experiencing the universe as a human being</p>
