--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   </head>
   <header>
   <!--Navbar-->
-    <nav id="navbar" class="fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 lg:mx-10 lg:mt-5 shadow-xl rounded-lg">
+    <nav id="navbar" class="fixed inset-x-0 flex flex-center justify-between flex-wrap p-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg sm:rounded-bl-lg sm:rounded-br-lg">
       <div class="flex items-center flex-shrink-0 text-green-600 mr-6">
         <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
         <span class="font-bold text-2xl tracking-tight">Oke Amuwha</span>
       </div>
-      <div class="block md:hidden">
-        <button class="flex items-center px-3 py-2 border rounded hover:text-green-300 hover:border-green-300">
+      <div id="hamburger" class="block md:hidden">
+        <button class="flex items-center px-3 py-2 border border-black rounded hover:text-green-300 hover:border-green-300">
           <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
         </button>
       </div>
-      <div class="w-full block md:flex md:items-center md:w-auto">
+      <div id="content" class="w-full hidden md:flex md:items-center md:w-auto">
         <div class="text-sm md:flex-grow">
           <a href="#school" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">About</a>
           <a href="#skills" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">Skills</a>
@@ -28,16 +28,31 @@
         </div>
       </div>
     </nav>
-    <!--Show navbar on scroll-->
     <script>
+      /*Show navbar on scroll*/
       window.onscroll = function() {
-        var currentScrollPos = window.pageYOffset;
+        let currentScrollPos = window.pageYOffset;
         if (currentScrollPos > 400) {
           document.getElementById("navbar").style.top = "0";
         } else {
           document.getElementById("navbar").style.top = "-300px";
         }
       }
+      
+      /*Show/hide navigation systems*/
+      document.addEventListener('DOMContentLoaded', function() {
+      let menu = document.getElementById('content');
+
+      document.getElementById('hamburger').addEventListener('click', event => {
+        menu.classList.toggle('hidden')
+        })
+      })
+
+      /*Fade in/out*/
+      const observer = new IntersectionObserver(entries => {
+
+      })
+      observer.observe(document.getElementById("navbar"));
     </script>
   </header>
   <!--Main-->
