Trying to make navbar fade in

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
           <a href="#projects" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">Projects</a>
           <a href="#experience" class="block mt-4 md:inline-block md:mt-0 hover:text-green-300 mr-4">Experience</a>
         </div>
+        <div>
+          <a href="#" class="inline-block text-sm px-4 py-2 leading-none border rounded text-green-600 border-green-600 hover:border-transparent hover:text-green-300 hover:bg-green-600 mt-4 lg:mt-0">Resume</a>
+        </div>
       </div>
     </nav>
     <script>
@@ -52,7 +55,7 @@
       const observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
           if entry.isIntersecting() {
-            document.querySelectorAll(".animated")[0].classList.add(fadeIn); 
+            document.querySelectorAll(".fade").classList.add(fadeIn); 
           }
         })
       })
@@ -157,38 +160,38 @@
                 </div>
                 <!--HTML-->
                 <div class="hover:text-green-300">
-                  <img class="rounded-full mx-auto" src="images/HTML.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/HTML.svg" alt="HTML" width="80">
                   <p class="pt-2 text-lg">HTML</p>
                 </div>
                 <!--Python-->
                 <div class="hover:text-green-300">
-                  <img class="rounded-full mx-auto" src="images/Python.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/Python.svg" alt="Python" width="80">
                   <p class="pt-2 text-lg">Python</p>
                 </div class="hover:text-green-300">
                 <!--Java-->
                 <div class="hover:text-green-300">
-                  <img class="rounded-full mx-auto" src="images/Java.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/Java.svg" alt="Java" width="80">
                   <p class="pt-2 text-lg">Java</p>
                 </div>
                 <!--Github-->
                 <div class="hover:text-green-300">
-                  <img class="rounded-full mx-auto" src="images/GitHub.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/GitHub.svg" alt="Github" width="80">
                   <p class="pt-2 text-lg">Github</p>
                 </div class="hover:text-green-300">
                 <!--Figma-->
                 <div class="hover:text-green-300">
-                  <img class="rounded-full mx-auto" src="images/Figma.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/Figma.svg" alt="Figma" width="80">
                   <p class="pt-2 text-lg">Figma</p>
                 </div>
                 <!--Tailwind-->
                 <div class="hover:text-green-300">
-                  <img class="rounded-full mx-auto" src="images/Tailwind.svg" alt="C++" width="80">
+                  <img class="rounded-full mx-auto" src="images/Tailwind.svg" alt="Tailwind" width="80">
                   <p class="pt-2 text-lg">Tailwind</p>
                 </div>
                 <!--React-->
                 <div class="hover:text-green-300">
-                  <img class="rounded-full mx-auto" src="images/React.svg" alt="C++" width="80">
-                  <p class="pt-2 text-lg">React JS</p>
+                  <img class="rounded-full mx-auto" src="images/React.svg" alt="React" width="80">
+                  <p class="pt-2 text-lg">PHP</p>
                 </div>
               </div>
             </div>
